# Awesome-managed-agent

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.api  LICENSE  README.md  docker-compose.yml  pyproject.toml
artifacts/: observability_run_output.json  observability_ui_snapshot.json  observability_ui_snapshot.md
backend/app/agents/: base.py  dummy.py
backend/app/api/: server.py
backend/app/models/: __init__.py  domain.py
backend/app/runtime/: commander.py  events.py  executor.py  guardrails.py  registry.py  state_machine.py  streaming.py  worker.py
backend/app/services/: observability_service.py
deploy/grafana/: atrium.json
deploy/helm/atrium/: Chart.yaml  values.yaml
docs/: CREDITS.md  getting-started.md
docs/execution/: AGENT_CONTEXT.md  HANDOFFS.md  TASKS.md
docs/files/: PHASE-2-sandbox.md  PHASE-3-real-runtimes.md
docs/guide/: agent-patterns.md  concepts.md  seeding-agents.md  testing-agents.md  writing-agents.md
docs/operations/: load-test-results.md
docs/operations/runbooks/: backfill-events.md  deploy.md  rollback.md  stuck-session.md
docs/spec/: API.md  CONSTITUTION.md  COST_MODEL.md  DATA_MODEL.md  EVENTS.md  EXECUTION_SEMANTICS.md  PLANNING.md  SPEC.md  STATE_MACHINE.md  UI_SPEC.md
docs/superpowers/plans/: 2026-04-27-atrium-framework.md
docs/superpowers/specs/: 2026-04-27-atrium-framework-design.md
frontend/: app.js  console.html  console.js  index.html  styles.css
migrations/versions/: 0003_mcp_servers.py  0004_webhooks.py
scripts/: import_wshobson.py  run_observability_demo.py  run_runtime_ui.py
src/atrium/: __init__.py  cli.py
src/atrium/api/: app.py  auth.py  (+3 more)
tests/: conftest.py  test_cli.py  test_commander.py  test_e2e.py  test_guardrails.py  test_observability_demo.py  test_runtime.py
tests/fixtures/: oas_stream_sample.jsonl
tests/integration/: test_echo_session_end_to_end.py  test_session_resume.py
tests/load/: locustfile.py
tests/test_api/: test_agent_builder.py  test_bulk_create.py  test_health.py  test_registry.py  test_threads.py  test_widget_tokens.py
tests/test_core/: test_agent.py  test_agent_factory.py  test_agent_store.py  test_agent_store_migration.py  test_guardrails.py  test_http_agent.py  test_input_utils.py  test_llm_agent.py  test_mcp_server_store.py  test_models.py  test_registry.py  test_retry.py  test_seeds.py  test_storage.py  test_thread_store.py  test_workspace_isolation.py
tests/test_engine/: test_commander.py  test_graph_builder.py  test_llm.py  test_orchestrator.py  test_plan_validation.py  test_pricing.py
tests/test_harness/: test_artifacts.py  test_bridge_stream.py  test_in_memory_sandbox.py  test_mcp_gateway.py  test_oas_translator.py  test_session_lifecycle.py
tests/test_streaming/: test_bus.py  test_events.py  test_events_aiosqlite.py  test_webhook_delivery.py
(+317 files in other folders)
