[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "atrium"
version = "0.1.0"
description = "Observable, cost-bounded, human-in-the-loop agent orchestration on top of LangGraph"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2",
    "langchain-core>=0.3",
    "langgraph-checkpoint-sqlite>=2.0",
    "fastapi>=0.115",
    "uvicorn>=0.32",
    "httpx>=0.27",
    "pydantic>=2.9",
    "aiosqlite>=0.20",
    "jinja2>=3.1",
]

[project.optional-dependencies]
openai = ["langchain-openai>=0.2"]
anthropic = ["langchain-anthropic>=0.3"]
google = ["langchain-google-genai>=2.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-httpx>=0.30",
    "ruff>=0.6",
]

[project.scripts]
atrium = "atrium.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/atrium"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 100
