[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "atrium"
version = "0.1.0"
description = "Observable, cost-bounded, human-in-the-loop agent orchestration on top of LangGraph"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2",
    "langchain-core>=0.3",
    "langgraph-checkpoint-sqlite>=2.0",
    "fastapi>=0.115",
    "uvicorn>=0.32",
    "httpx>=0.27",
    "pydantic>=2.9",
    "aiosqlite>=0.20",
    "opentelemetry-api>=1.41.1",
    "opentelemetry-sdk>=1.41.1",
    "opentelemetry-exporter-otlp>=1.41.1",
    "opentelemetry-instrumentation-fastapi>=0.62b1",
    "opentelemetry-instrumentation-httpx>=0.62b1",
    "prometheus-client>=0.25.0",
    "prometheus-fastapi-instrumentator>=7.1.0",
    "kubernetes-asyncio>=35.0.1",
]

[project.optional-dependencies]
openai = ["langchain-openai>=0.2"]
anthropic = ["langchain-anthropic>=0.3"]
google = ["langchain-google-genai>=2.0"]
all = [
    "langchain-openai>=0.2",
    "langchain-anthropic>=0.3",
    "langchain-google-genai>=2.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-httpx>=0.30",
    "ruff>=0.6",
    "aiofiles>=23.0",
]
harness = [
    "aiodocker>=0.21",
    "aiofiles>=23.0",
]
postgres = [
    "asyncpg>=0.29",
]

[project.scripts]
atrium = "atrium.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/atrium"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: integration tests that use real subprocesses (no Docker)",
    "docker: tests that require a live Docker daemon",
]

[tool.ruff]
target-version = "py311"
line-length = 100
